some file added

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "spatie/laravel-webhook-client": "^3.1",
         "victorybiz/laravel-crypto-payment-gateway": "^1.2",
         "yabacon/paystack-php": "^2.2"
     },
